# scribe

./: .gitignore  CMakeLists.txt  Readme.md  build-valgrind.sh  build.sh  run-valgrind.sh
.github/workflows/: cmake-multibranch-build.yml
logger/: Readme.md
logger-lib-consumer/include/: LoggerLibConsumer.h
logger-lib-consumer/src/: LoggerLibConsumer.cpp
logger/api/: ScribeAPI.h  ScribeApi.h
logger/include/: ILogger.h  ILoggerContainer.h  Logger.h  LoggerApi.h  LoggerContainer.h  LoggerToFile.h  LoggerToStdOut.h  LoggerWrapper.h
logger/src/: ILoggerContainer.cpp  Logger.cpp  LoggerContainer.cpp  LoggerToFile.cpp  LoggerToStdOut.cpp  LoggerWrapper.cpp  ScribeAPI.cpp
sample/: main.cpp
sample/client-with-threads/: CallbackHandler.cpp  CallbackHandler.h  ICallbackHandler.h  LoggerToStdOut.cpp  LoggerToStdOut.h  SomeOperations.cpp  SomeOperations.h  main.cpp
sample/simple-sample-client/: LoggerToStdOut.cpp  LoggerToStdOut.h  main.cpp
